[package]
name = "tetsy-hash-db"
version = "0.15.2-beta"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy trait for hash-keyed databases."
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "no-std", "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-hash-db"

[features]
default = ["std"]
std = [
]
