[package]
name = "tetsy-hash256-std-hasher"
version = "0.15.3"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy standard library hasher for 256-bit prehashed keys."
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies", "no-std" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-hash256-std-hasher"

[[bench]]
name = "bench"
harness = false

[dependencies]
crunchy = "0.2.1"

[dev-dependencies]
criterion = "0.3.3"

[features]
default = ["std"]
std = []
