[package]
name = "tetsy-memory-db"
version = "0.18.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "In-memory implementation of tetsy-hash-db, useful for tests"
repository = "https://github.com/tetcoin/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
heapsize = { version = "0.4", optional = true }
tetsy-util-mem = { version = "0.3", default-features = false }
tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.2"}
hashbrown = { version = "0.6.3", default-features = false, features = [ "ahash" ] }
# There's a compilation error with ahash-0.2.17, which is permitted by the 0.2.11 constraint in hashbrown.
ahash = "0.2.18"

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher", version = "0.15.2"}
criterion = "0.2.8"

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
  "tetsy-util-mem/std",
]
deprecated = [ "heapsize" ]

[[bench]]
name = "bench"
harness = false
