[package]
name = "tetsy-memory-db"
version = "0.25.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "In-memory implementation of tetsy-hash-db, useful for tests"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://github.com/tetcoin/trie"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-memory-db"

[dependencies]
tetsy-util-mem = { version = "0.8.0", default-features = false, features = ["hashbrown"] }
tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.2"}
hashbrown = { version = "0.9.1", default-features = false, features = [ "ahash" ] }

[dev-dependencies]
tetsy-keccak-hasher = { path = "../test-support/tetsy-keccak-hasher", version = "0.15.2"}
criterion = "0.3.3"

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
  "tetsy-util-mem/std",
]

[[bench]]
name = "bench"
harness = false
