[package]
name = "tetsy-trie-db"
version = "0.20.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Merkle-Patricia Trie generic over key hasher and node encoding"
repository = "https://github.com/tetcoin/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
smallvec = "1.0.0"
tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.2"}
hashbrown = { version = "0.6.3", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.6"
tetsy-memory-db = { path = "../tetsy-memory-db", version = "0.19.0" }
rand = { version = "0.7", default-features = false, features = ["small_rng"] }
tetsy-trie-root = { path = "../tetsy-trie-root", version = "0.16.0"}
tetsy-trie-standardmap = { path = "../test-support/tetsy-trie-standardmap", version = "0.15.2" }
tetsy-keccak-hasher = { path = "../test-support/tetsy-keccak-hasher", version = "0.15.2" }
# DISABLE the following line when publishing until cyclic dependencies are resolved https://github.com/rust-lang/cargo/issues/4242
# tetsy-reference-trie = { path = "../test-support/tetsy-reference-trie", default-features = false, version = "0.20.0" }
hex-literal = "0.2"
criterion = "0.3"
tetsy-codec = "3.0"
tetsy-codec-derive = "3.0"

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
  "rustc-hex",
]

[[bench]]
name = "bench"
harness = false
