[package]
name = "tetsy-trie-root"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "In-memory patricia trie operations for tetsy"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore" ]
categories = [ "no-std", "cryptography::cryptocurrencies" ]
homepage = "https://github.com/tetcoin/trie"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-trie-root"

[dependencies]
tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.2" }

[features]
default = ["std"]
std = [
	"tetsy-hash-db/std"
]
