[package]
name = "tetsy-trie-root"
version = "0.16.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy in-memory patricia trie operations"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies", "no-std" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-trie-root"

[dependencies]
tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.3" }

[features]
default = ["std"]
std = [
	"tetsy-hash-db/std"
]
