[package]
name = "keccak-hasher"
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/paritytech/parity/"
license = "Apache-2.0"

[dependencies]
tiny-keccak = "1.4.2"
tetsy-hash-db = { path = "../../tetsy-hash-db", default-features = false, version = "0.15.2" }
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
]
