[package]
name = "tetsy-keccak-hasher"
version = "0.15.4"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy keccak-256 implementation of the hasher trait"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-keccack-hasher"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tetsy-hash-db = { path = "../../tetsy-hash-db", default-features = false, version = "0.15.3" }
tetsy-hash256-std-hasher = { path = "../../tetsy-hash256-std-hasher", version = "0.15.3" }

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
]
