[package]
name = "tetsy-trie-bench"
description = "Standard benchmarking suite for tetsy tries"
version = "0.26.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://github.com/tetcoin/trie"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-trie-bench"

[dependencies]
tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.2" }
tetsy-trie-standardmap = { path = "../tetsy-trie-standardmap", version = "0.15.2" }
tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.25.0" }
tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0" }
tetsy-trie-db = { path = "../../tetsy-trie-db", version = "0.22.0" }
criterion = "0.3.3"
tetsy-scale-codec = { version = "1.0.3" }
