[package]
name = "tetsy-trie-standardmap"
version = "0.15.3"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "standard tetsy test map for profiling tries"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-trie-standardmap"

[dependencies]
tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.4"}
tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.3"}
