[package]
name = "tetsy-trie-root-test"
version = "0.17.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests fo trie-root crate"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
categories = [ ]
edition = "2018"

[dependencies]
tetsy-trie-root = { path = "..", version = "0.16.0" }
tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.2" }
hex-literal = "0.3"
tetsy-keccak-hasher = { path = "../../test-support/tetsy-keccak-hasher", version = "0.15.2" }
tetsy-trie-standardmap = { path = "../../test-support/tetsy-trie-standardmap", version = "0.15.2" }
tetsy-reference-trie = { path = "../../test-support/tetsy-reference-trie", version = "0.23.0" }
