[package]
name = "tetsy-trie-root-test"
version = "0.17.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "tests for tetsy-trie-root crate"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/trie.git"
documentation = "https://docs.rs/tetsy-trie-root-test"

[dependencies]
tetsy-trie-root = { path = "..", version = "0.16.1" }
tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.3" }
hex-literal = "0.4"
tetsy-keccak-hasher = { path = "../../test-support/tetsy-keccak-hasher", version = "0.15.4" }
tetsy-trie-standardmap = { path = "../../test-support/tetsy-trie-standardmap", version = "0.15.3" }
tetsy-reference-trie = { path = "../../test-support/tetsy-reference-trie", version = "0.23.0" }
