[package]
name = "tetsy-keccak-hasher"
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/tetcoin/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
tiny-keccak = "1.4.2"
tetsy-hash-db = { path = "../../tetsy-hash-db", default-features = false, version = "0.15.2" }
tetsy-hash256-std-hasher = { path = "../../tetsy-hash256-std-hasher", version = "0.15.2" }

[features]
default = ["std"]
std = [
  "tetsy-hash-db/std",
]
